--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
   },
   "require": {
     "php": "^7.4 || ^8.0",
+    "ext-json": "*",
     "codeigniter4/framework": "v4.4.8",
-    "ext-json": "*"
+    "dompdf/dompdf": "^3.1"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9",
