--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": "^7.4 || ^8.0",
     "ext-json": "*",
     "codeigniter4/framework": "v4.4.8",
-    "dompdf/dompdf": "^3.1"
+    "dompdf/dompdf": "^3.1",
+    "mpdf/mpdf": "8.2"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9",
