--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "ext-json": "*",
     "codeigniter4/framework": "v4.4.8",
     "dompdf/dompdf": "^3.1",
-    "mpdf/mpdf": "8.2"
+    "mpdf/mpdf": "8.2",
+    "phpoffice/phpspreadsheet": "^4.3"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9",
